gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b19523.d
version https://git-lfs.github.com/spec/v1
oid sha256:693ad05a82e6b6aa5784672804fa9554baadc7d17f08d5506209a8ad2328c98b
size 516
